--- a/styles.scss
+++ b/styles.scss
@@ -29,27 +29,13 @@
 	box-sizing: inherit;
 }
 
-html {
-	@include respond(tab-land) {
-		font-size: 56.25%;
-	}
-
-	@include respond(tab-port) {
-		font-size: 50%;
-	}
-
-	@include respond(big-desktop) {
-		font-size: 80%;
-	}
-}
-
 body {
 	box-sizing: border-box;
 	padding: 3rem;
 	font-family: 'Lato', sans-serif;
 
 	@include respond(tab-port) {
-		padding: 0;
+		padding: 2rem 1rem;
 	}
 }
 
@@ -58,6 +44,12 @@ body {
 	flex-direction: column;
 	gap: 1rem;
 	align-items: center;
+    border: 1px solid rgb(210, 210, 210);
+    border-radius: 8px;
+    width: 50%;
+    padding: 3rem;
+    margin: auto;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 input {
@@ -66,5 +58,28 @@ input {
 
 button {
 	padding: 0.25rem;
-    cursor: pointer;
+	cursor: pointer;
+    font-family: 'Lato', sans-serif;
+    font-size: 1rem;
+}
+
+.radio-button-container {
+	display: flex;
+	gap: 1rem;
+}
+
+.radio-button {
+	border: 1px solid gray;
+    border-radius: 4px;
+	padding: .7rem;
+
+	input {
+		cursor: pointer;
+        margin-right: 8px;
+        transform: scale(1.5);
+	}
+
+    label {
+        color: purple
+    }
 }
