--- a/styles.scss
+++ b/styles.scss
@@ -50,6 +50,9 @@ body {
 	padding: 3rem;
 	margin: auto;
 	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+	@include respond(tab-port) {
+		width: 100%;
+	}
 }
 
 input {
